--- a/coordinate-calcite/index.html
+++ b/coordinate-calcite/index.html
@@ -29,11 +29,11 @@
 
     .custom-coordinate-conversion {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       padding: 10px;
-      gap: 0 10px;
+      gap: 10px;
       background-color: white;
-      min-width: 450px;
+      min-width: 300px;
     }
 
     .custom-coordinate-conversion calcite-select {}
