--- a/coordinate-calcite/index.html
+++ b/coordinate-calcite/index.html
@@ -10,10 +10,8 @@
   <link rel="stylesheet" type="text/css" href="https://js.arcgis.com/calcite-components/2.6.0/calcite.css" />
 
 
-  <link el="preload" id="jsapi-mode-light" rel="stylesheet"
+  <link id="jsapi-mode-light" rel="stylesheet"
     href="https://js.arcgis.com/4.29/@arcgis/core/assets/esri/themes/light/main.css" />
-  <link el="preload" disabled id="jsapi-mode-dark" rel="stylesheet"
-    href="https://js.arcgis.com/4.29/@arcgis/core/assets/esri/themes/dark/main.css" />
 
   <script src="https://js.arcgis.com/4.29/"></script>
 
@@ -34,12 +32,6 @@
       gap: 10px;
       background-color: white;
       min-width: 350px;
-    }
-
-    .custom-coordinate-conversion calcite-select {}
-
-    .custom-coordinate-conversion calcite-inline-editable {
-      flex: 1;
     }
   </style>
 
