--- a/coordinate-calcite-js/index.html
+++ b/coordinate-calcite-js/index.html
@@ -24,20 +24,12 @@
       height: 100%;
       width: 100%;
     }
-
-    .custom-coordinate-conversion {
-      display: flex;
-      flex-direction: column;
-      padding: 10px;
-      gap: 10px;
-      background-color: white;
-      min-width: 350px;
-    }
   </style>
 
 
   <!-- Our application -->
   <script src="./map.js" type="module"></script>
+  <link rel="stylesheet" href="./calcite-coordinate.css" />
 </head>
 
 <body>
