--- a/coordinate-fluent-react-js/index.html
+++ b/coordinate-fluent-react-js/index.html
@@ -39,7 +39,7 @@
       <calcite-tooltip placement="bottom" reference-element="toggle-modal" close-on-click slot="content-end">Widget Code
         Snippets</calcite-tooltip>
     </calcite-navigation>
-    <iframe id="iframe" src="http://localhost:3000"></iframe>
+    <iframe id="iframe" src="./build/"></iframe>
   </calcite-shell>
 
   <!-- Demo template interactive elements -->
