--- a/coordinate-fluent-react-js/index.html
+++ b/coordinate-fluent-react-js/index.html
@@ -30,7 +30,7 @@
 <body>
   <calcite-shell class="calcite-mode-light">
     <calcite-navigation slot="header" id="nav">
-      <calcite-navigation-logo href="" icon="footprint" alt="Application logo" slot="logo"
+      <calcite-navigation-logo icon="footprint" alt="Application logo" slot="logo"
         heading="CoordinateConversion Component with React and Fluent 2"
         description="Esri Developer Summit 2024"></calcite-navigation-logo>
       <calcite-action-pad layout="horizontal" expand-disabled slot="content-end">
