--- a/coordinate-calcite-js/index.html
+++ b/coordinate-calcite-js/index.html
@@ -41,7 +41,7 @@
         heading="Custom CoordinateConversion Widget with Calcite Components"
         description="Esri Developer Summit 2024"></calcite-navigation-logo>
       <calcite-action-pad layout="horizontal" expand-disabled slot="content-end">
-        <calcite-action id="toggle-modal" text="Widget Code Snippets" icon="code"></calcite-action>
+        <calcite-action id="toggle-modal" text="Custom Widget Code Snippets" icon="code"></calcite-action>
       </calcite-action-pad>
       <calcite-tooltip placement="bottom" reference-element="toggle-modal" close-on-click slot="content-end">Widget Code
         Snippets</calcite-tooltip>
@@ -51,7 +51,7 @@
 
   <!-- Demo template interactive elements -->
   <calcite-modal id="modal" width-scale="l" class="calcite-mode-light">
-    <div slot="header">Widget Code Snippets</div>
+    <div slot="header">Custom Widget Code Snippets</div>
     <div slot="content">
       <calcite-accordion selection-mode="single" scale="l">
         <calcite-accordion-item heading="1. Create Calcite HTML" description="Set up the DOM using calcite-components"
