cleanup demo component

--- a/coordinate-fluent-react-js/index.html
+++ b/coordinate-fluent-react-js/index.html
@@ -12,7 +12,7 @@
   <!-- Demo imports -->
   <script src="./app.js" defer></script>
   <link rel="stylesheet" href="./style.css" />
-  <script type="module" src="../esri-devsummit/esri-devsummit.esm.js"></script>
+  <script type="module" src="../esri-demo/esri-demo.esm.js"></script>
   <style>
     html,
     body,
@@ -48,10 +48,10 @@
     <div slot="content">
       <calcite-accordion selection-mode="single" scale="l">
         <calcite-accordion-item expanded heading="1. TODO" description="TODO" icon-start="group-layout-elements">
-          <esri-devsummit-code source="TODO"></esri-devsummit-code>
+          <esri-demo-code language="js" source="TODO"></esri-demo-code>
         </calcite-accordion-item>
         <calcite-accordion-item heading="2. TODO" description="TODO" icon-start="list">
-          <esri-devsummit-code source="TODO"></esri-devsummit-code>
+          <esri-demo-code language="js" source="TODO"></esri-demo-code>
         </calcite-accordion-item>
       </calcite-accordion>
     </div>
