--- a/coordinate-calcite-js/index.html
+++ b/coordinate-calcite-js/index.html
@@ -56,6 +56,11 @@
       <calcite-accordion selection-mode="single" scale="l">
         <calcite-accordion-item heading="1. Create Calcite HTML" description="Set up the DOM using calcite-components"
           icon-start="code">
+          <a href="https://developers.arcgis.com/calcite-design-system/components/segmented-control/"
+            target="_blank">Segmented control</a> | <a
+            href="https://developers.arcgis.com/calcite-design-system/components/select/" target="_blank">Select</a> |
+          <a href="https://developers.arcgis.com/calcite-design-system/components/inline-editable/"
+            target="_blank">Inline editable</a>
           <esri-demo-code language="js" source="export function createCustomCoordinateConversion(view) {
 
   // Create the ViewModel
